Clases Repository y Service
Clases repository y service agregadas para Proyecto, Actividad, Categoria

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=3000
 
 # DataSource MariaDB
-spring.datasource.url=jdbc:mariadb://localhost:3306/EmpleosDB
+spring.datasource.url=jdbc:mariadb://localhost:3306/AgendaAppDB
 spring.datasource.username=userDB
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
