--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,8 @@
+server.servlet.context-path=/backend
 server.port=3000
 
 # DataSource MariaDB
-spring.datasource.url=jdbc:mariadb://localhost:3306/AgendaAppDB
+spring.datasource.url=jdbc:mariadb://localhost:3306/AgendaApp
 spring.datasource.username=userDB
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
