--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
         "@angular/cli": "~12.2.9",
         "@angular/compiler-cli": "~12.2.0",
         "@types/jasmine": "~3.8.0",
+        "@types/jquery": "^3.5.8",
         "@types/node": "^12.11.1",
         "jasmine-core": "~3.8.0",
         "karma": "~6.3.0",
