--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -29,7 +29,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+				"src/assets/js/moon.js"
+			]
           },
           "configurations": {
             "production": {
