Modulos agregados y cambios menores
1. Modulos para Plugin, Post y TextEditor agregados.
2. Correccion de error al cargar listado de proyectos y categorias en nuevos usuarios, se mostraba 'Sin Proyecto' y 'Sin Categoria'.
3. Eliminacion de rutas repetidas en AppRouting.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,37 +10,36 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "~12.2.0",
-        "@angular/common": "~12.2.0",
-        "@angular/compiler": "~12.2.0",
-        "@angular/core": "~12.2.0",
-        "@angular/forms": "~12.2.0",
-        "@angular/platform-browser": "~12.2.0",
-        "@angular/platform-browser-dynamic": "~12.2.0",
-        "@angular/router": "~12.2.0",
-        "@popperjs/core": "^2.10.2",
+        "@angular/animations": "~13.1.1",
+        "@angular/common": "~13.1.1",
+        "@angular/compiler": "~13.1.1",
+        "@angular/core": "~13.1.1",
+        "@angular/forms": "~13.1.1",
+        "@angular/platform-browser": "~13.1.1",
+        "@angular/platform-browser-dynamic": "~13.1.1",
+        "@angular/router": "~13.1.1",
+        "@popperjs/core": "^2.11.2",
         "flatpickr": "^4.6.9",
         "font-awesome": "^4.7.0",
-        "ngx-bootstrap": "^7.1.0",
-        "ngx-editor": "^11.1.1",
-        "ngx-popperjs": "^12.2.1",
-        "rxjs": "~6.6.0",
-        "tslib": "^2.3.0",
+        "ngx-editor": "^12.1.0",
+        "ngx-popperjs": "^13.0.0",
+        "rxjs": "~7.5.2",
+        "tslib": "^2.3.1",
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~12.2.9",
-        "@angular/cli": "~12.2.9",
-        "@angular/compiler-cli": "~12.2.0",
-        "@types/jasmine": "~3.8.0",
-        "@types/jquery": "^3.5.8",
-        "@types/node": "^12.11.1",
-        "jasmine-core": "~3.8.0",
-        "karma": "~6.3.0",
+        "@angular-devkit/build-angular": "~13.1.2",
+        "@angular/cli": "^13.1.2",
+        "@angular/compiler-cli": "~13.1.1",
+        "@types/jasmine": "~3.10.3",
+        "@types/jquery": "^3.5.12",
+        "@types/node": "^17.0.8",
+        "jasmine-core": "~4.0.0",
+        "karma": "~6.3.10",
         "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage": "~2.0.3",
-        "karma-jasmine": "~4.0.0",
+        "karma-coverage": "~2.1.0",
+        "karma-jasmine": "~4.0.1",
         "karma-jasmine-html-reporter": "~1.7.0",
-        "typescript": "~4.3.5"
+        "typescript": "~4.5.4"
     }
 }
